# forge-cli

./: .gitignore  LICENSE  README.md  ROADMAP.md  SCHEMA.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
contrib/brew/: forge-cli.rb  ws-cli.rb
docs/: _config.yml  architecture.md  commands.md  comparison.md  getting-started.md  index.md  mcp.md
src/forge/: __init__.py  ai.py  cli.py  config.py  cve.py  deps.py  engine.py  graph.py  install.py  rag.py  server.py
src/forge/tui/: __init__.py  app.py  app.tcss  models.py
src/forge/tui/screens/: cves.py  log.py  overview.py  repos.py  sessions.py
src/ws/: ai.py  cli.py  config.py  engine.py  git.py  install.py  server.py
src/ws_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_ai.py  test_cli.py  test_config.py  test_cve.py  test_deps.py  test_engine.py  test_git.py  test_git_integration.py  test_graph.py  test_install.py  test_rag.py  test_server.py
