[project]
name = "ws-cli"
version = "0.3.0"
description = "Brewix workspace CLI — cross-project workspace management"
requires-python = ">=3.10"
authors = [{ name = "Brewix" }]
license = { text = "MIT" }
dependencies = ["mcp>=1.0.0"]

[project.scripts]
ws = "ws.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest", "pytest-mock", "pytest-asyncio"]
dev = ["ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true
