[project]
name = "forge-cli"
version = "0.5.1"
description = "Forge — local-first AI workspace toolkit for Forge OS"
requires-python = ">=3.10"
authors = [{ name = "Forge" }]
license = { text = "MIT" }
dependencies = ["mcp>=1.0.0"]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest", "pytest-mock", "pytest-asyncio"]
dev = ["ruff", "mypy"]
dashboard = ["textual>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true
